[package]
name = "ecosystem_scrapper"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "readme_fetcher"
path = "src/readme_fetcher.rs"

[[bin]]
name = "latest_repos"
path = "src/latest_repos.rs"


[dependencies]
reqwest = "0.11"
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.75"
git2 = "0.13.10"
tempfile = "3.2.0"
toml = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
